// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled attr 1`] = `
.H1-15vt02v-m798do {
  font-size: 48;
  margin: 4rem;
}

<h1
  className="H1-15vt02v-m798do"
  fontSize={48}
/>
`;

exports[`styled basic render 1`] = `
.H1-13wdnau-4e22ma {
  font-size: 20px;
}

<h1
  className="H1-13wdnau-4e22ma"
>
  hello world
</h1>
`;

exports[`styled call expression 1`] = `
.H1-13wdnau-4e22ma {
  font-size: 20px;
}

<h1
  className="legacy__class H1-13wdnau-4e22ma"
>
  hello world
</h1>
`;

exports[`styled composition 1`] = `
.H1-13wdnau-4e22ma {
  font-size: 20px;
}

.H2-vxb7tq-1rf0eq4 {
  font-size: 13.333333333333334;
}

<h1
  className="legacy__class H2-vxb7tq-1rf0eq4 H1-13wdnau-4e22ma"
>
  hello world
</h1>
`;

exports[`styled fragments 1`] = `
.H2-1t8i2zo-1ci3vp8 {
  font-size: 40;
}

.H1-1qd8mfb-n3glby {
  font-size: 20px;
  height: ({ height }) => heightpx;
  color: ({ color }) => color;
}

<h1
  className="legacy__class H2-1t8i2zo-1ci3vp8 H1-1qd8mfb-n3glby"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.H1-13wdnau-4e22ma {
  font-size: 20px;
}

.H2-vxb7tq-tp299i {
  font-size: 40;
}

<h1
  className="legacy__class H2-vxb7tq-tp299i H1-13wdnau-4e22ma"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled higher order component 1`] = `
.onyx-wn422p-1q77sy7 {
  name: onyx;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  flex-direction: column;
  name: squirtle-blue-bg;
  background-color: #7FC8D6;
}

.Content-13wdnau-1jaetra {
  font-size: 20px;
}

<div
  className="onyx-wn422p-1q77sy7 Content-13wdnau-1jaetra"
/>
`;

exports[`styled name 1`] = `
.FancyH1-1azfbv1-1vm6m3p {
  name: FancyH1;
  font-size: 20px;
}

<h1
  className="FancyH1-1azfbv1-1vm6m3p"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
.H1-dae0kw-3ik5va {
  font-size: 12px;
}

<h1
  className="H1-dae0kw-3ik5va"
>
  hello world
</h1>
`;
